Release snapshot 2026-07-18
